# webwatcheralert

./: .gitignore  BACKGROUND_SERVICE.md  Cargo.toml  GETTING_STARTED.md  PROJECT_PLAN.md  README.md  build.rs  claude.md  com.webwatcheralert.plist
scripts/: install-service.sh  service.sh
src/: cache.rs  config.rs  diff.rs  fetcher.rs  main.rs  matcher.rs  monitor.rs  notify.rs  ui.rs  watcher.rs
