[package]
name = "web-watcher-alert"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal UI
ratatui = "0.26"
crossterm = "0.27"

# Text diffing
similar = "2.4"

# Notifications
notify-rust = "4.11"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Hashing for cache filenames
sha2 = "0.10"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Directory utilities
dirs = "5.0"
